añadio main slogan

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md">
-      <div class="container-fluid">
+      <div class="container-fluid navbar__container">
 
         <!-- NAVBAR LOGO -->
-        <a class="navbar-brand text-center col-lg-4" href="./index.html">
+        <a class="navbar-brand text-star col-lg-4" href="./index.html">
           <img class="navbar__logo--img" src="./images/logo-gris.png" alt="logo-brand">
         </a>
 
@@ -70,9 +70,9 @@
         </div>
 
         <!-- NAVBAR ICONS -->
-        <div class="collapse navbar-collapse justify-content-center col-xl-4" id="navbarNav">
-          <a href=""><i class="bi bi-search"></i></a>
-          <a href="./pages/productos.html"><i class="bi bi-cart3"></i></a>
+        <div class="collapse navbar-collapse justify-content-end col-xl-4" id="navbarNav">
+          <a class="navbar__icon" href=""><i class="bi bi-search"></i></a>
+          <a class="navbar__icon" href="./pages/productos.html"><i class="bi bi-cart3"></i></a>
         </div>
 
       </div>
@@ -81,9 +81,13 @@
   </header>
 
   <!-- ------------------------------ MAIN -->
-  <main>
+  <main class="">
 
-    
+    <!-- SLOGAN -->
+    <div class="main__slogan container-fluid">
+      <img class="slogan__img" src="images/slogan.jpg" alt="foto-slogan">
+      <h3 class="slogan__h3">Muebles que encajan</h3>
+    </div>
 
   </main>
 
